Migrate from OpenAI to Anthropic Claude Sonnet 4.5
Complete migration for SF workshop with Anthropic sponsorship. Updated packages, env vars, source files, and all documentation. Fixed Python SDK URLs and verified all scripts working.

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@
 BRIGHTDATA_API_KEY=your_api_key_here
 
 # ===== OPTIONAL =====
-# OpenAI API key for LLM-powered synthesis (recommended for best results)
+# Anthropic API key for LLM-powered synthesis (recommended for best results)
 # If not set, the workflow will use a heuristic summarizer with citations
-# Get your key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
+# Get your key from: https://console.anthropic.com/settings/keys
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# Optional model override (default: gpt-4o-mini)
-OPENAI_MODEL=gpt-4o-mini
+# Optional model override (default: claude-sonnet-4-5)
+ANTHROPIC_MODEL=claude-sonnet-4-5
 
 # ===== OPTIONAL (Only for demo scripts) =====
 # Zone names from Zones page - only needed for npm run demo:api and npm run demo:mcp
