--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "node-fetch": "^3.3.2",
-    "openai": "^4.67.3",
-    "@langchain/openai": "^0.6.9",
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@langchain/anthropic": "^0.3.10",
     "@langchain/langgraph": "^0.4.8",
     "@langchain/mcp-adapters": "^0.6.0",
     "@langchain/core": "^0.3.0"
